z-index fix

--- a/src/app/resource-table/resource-table.component.scss
+++ b/src/app/resource-table/resource-table.component.scss
@@ -14,12 +14,12 @@
             height: 100%;
             position: absolute;
             width: 100%;
-            z-index: -1;
         }
 
         thead {
             position: sticky;
             top: 0;
+            z-index: 1;
         }
 
         tr {
